--- a/lang/backup_scheduler-fr_FR.po
+++ b/lang/backup_scheduler-fr_FR.po
@@ -4,9 +4,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-05-24T13:22:59+00:00\n"
+"PO-Revision-Date: 2012-09-02T10:31:53+00:00\n"
 "Last-Translator: SedLex <http://www.sedlex.fr/>\n"
 "Last-Translator: wkpixearts <wkpixeartsforall@gmail.com>\n"
+"Last-Translator: Matthieu <www.cliczone.fr>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -229,7 +230,7 @@ msgid "Cancel this process"
 msgstr "Annuler ce processus"
 
 msgid "Please wait..."
-msgstr "Merci d&#039;attendre ..."
+msgstr "Merci de patienter ..."
 
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr "(Pour l&#039;instant, il n&#039;y a pas de fichiers de sauvegarde... Vous devriez attendre ou vous pouvez forcer une sauvegarde (voir ci-dessous) )"
@@ -344,4 +345,46 @@ msgstr "Tout est Ok!"
 
 msgid "It is impossible to create the %s file in the %s folder. Please check folder/file permissions."
 msgstr "Il est impossible de créer le fichier %s dans le dossier %s. Merci de vérifier les droits d&#039;accès aux dossiers/fichiers."
+
+msgid "Please note that the current GMT time of the server is %s. If it is not correct, please configure the Wordpress installation correctly."
+msgstr "Attention, l&#039;heure GMT actuelle de votre serveur est %s. Si elle n&#039;est pas correcte, merci de configurer votre installation Wordpress correctement."
+
+msgid "How to restore the backup files?"
+msgstr "Comment restaurer les fichiers sauvegardés ?"
+
+msgid "To restore the backups, and if you have backuped the full installation, you will have to execute the following steps:"
+msgstr "Pour restaurer les sauvegardes, et si vous avec sauvegardé une installation complète, vous devez suivre les étapes suivantes :"
+
+msgid "Save all zip files (i.e. *.zip, *.z01, *.z02, etc.) in a single folder on your hard disk."
+msgstr "Sauvegardez tous les fichiers zip (*.zip, *.z01, *.z02, etc.) dans un dossier unique sur votre disque dur"
+
+msgid "Save the extracted files on your webserver."
+msgstr "Enregistrez les fichiers extraits sur votre serveur web"
+
+msgid "To restore the backups, and if you have backuped only some folders, you will have to execute the following steps:"
+msgstr "Pour restaurer les sauvegardes, et si vous avec sauvegardé seulement quelques dossiers, vous devez suivre les étapes suivantes :"
+
+msgid "Install a fresh version of Wordpress on your webserver."
+msgstr "Installez une nouvelle version vierge de Wordpress sur votre serveur"
+
+msgid "Replace the folders (i.e. 'plugins',  'themes', and/or 'uploads') of the root of your webserver by the extracted folders."
+msgstr "Remplacez les dossiers (ex : &#039;plugins&#039;,&#039;themes&#039;, et/ou &#039;uploads&#039;) à la racine de votre site avec ceux qui viennent d&#039;être extrait"
+
+msgid "Replace the wp-config.php (at the root of your webserver) with the extracted one."
+msgstr "Remplacez le fichier wp-config.php (à la racine de votre site) avec celui qui vient d&#039;être extrait"
+
+msgid "To download them, please click on the following links:"
+msgstr "Pour les télécharger, merci de cliquer sur les liens ci-dessous:"
+
+msgid "The file %s cannot be transfered to the FTP repository and PASV mode cannot be entered : %s"
+msgstr "Le fichier %s ne peux pas être transféré sur le dépôt FTP et le mode PASV ne peut être utilisé : %s"
+
+msgid "It seems impossible to switch to PASV mode"
+msgstr "Il semble impossible de passer en mode PASV"
+
+msgid "Unzip these files by using IZArc, Winzip, or Winrar (others software could not support these multipart zip and consider that the archive is corrupted)."
+msgstr "Décompressez les fichiers en utilisant IZArc, Winzip, ou Winrar (ou tout logiciel qui supporte les fichiers zip multiples)"
+
+msgid "Reimport the SQL files (i.e. *.sql1, *sql2, etc.) with phpmyadmin (it is recommended to save your database first)."
+msgstr "Réimporter les fichiers SQL (*.sql1, *sql2, etc.) avec phpmyadmin (il est recommandé que vous sauvegardiez votre base de donnée au préalable."
 
