--- a/lang/backup_scheduler-nl_NL.po
+++ b/lang/backup_scheduler-nl_NL.po
@@ -4,9 +4,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-07-20T06:16:43+00:00\n"
+"PO-Revision-Date: 2012-08-26T14:40:24+00:00\n"
 "Last-Translator: Matrix <http://www.pcbeveiligen.nl/>\n"
 "Last-Translator: WybAnema <www.mmwb.nl>\n"
+"Last-Translator: Jay <www.troisj.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -190,7 +191,7 @@ msgid "All SQL databases:"
 msgstr "Alle SQL databases:"
 
 msgid "Only your SQL database:"
-msgstr "Enkel je SQL databases:"
+msgstr "Uitsluitend je SQL databases:"
 
 msgid "Check this option if you want to save the text of your posts, your configurations, etc. for the main website"
 msgstr "Vink deze optie aan als je de tekst van je berichten, je instellingen, e.d. wilt opslaan voor de hoofdsite"
@@ -232,7 +233,7 @@ msgid "Please note that the files greater than this limit won't be included in t
 msgstr "Let op dat bestanden groter dan de opgegeven limiet niet in het gezipte bestand worden opgenomen!"
 
 msgid "The backup process has started %s hours ago but has not finished yet."
-msgstr "Het back-up prices is %s uur geleden begonnen en nog niet afgerond."
+msgstr "Het back-up proces is %s uur geleden begonnen en nog niet afgerond."
 
 msgid "Force a new backup (with Mail/FTP)"
 msgstr "Forceer een nieuwe back-up (met mail/FTP)"
@@ -278,4 +279,112 @@ msgstr "Er kan niet naar de folder %s geschreven worden"
 
 msgid "Everything OK!"
 msgstr "Alles gelukt!"
+
+msgid "Please also note that the backup won't be end exactly at that time. The backup process could take up to 6h especially if you do not have a lot of traffic on your website and/or if the backup is quite huge."
+msgstr "Let op: de backup is niet afgerond op dat tijdstip. Het kan wel tot 6 uur duren - zeker als er weinig bezoekers zijn op je site en/of als het om een zeer grote file gaat."
+
+msgid "Check this option if you want to save the images, the files, etc. that people have uploaded on their websites to create articles/posts/pages."
+msgstr "Vink deze optie aan als je de afbeeldingen en bestanden (uit artikels, berichten en pagina&#039;s) die gebruikers naar hun sites hebben geupload, wilt opslaan"
+
+msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your main website to create your articles/posts/pages."
+msgstr "Vink deze optie aan als je de afbeeldingen en bestanden (uit artikels, berichten en pagina&#039;s) van je eigen site, wilt opslaan"
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for this blog"
+msgstr "Vink deze optie aan als je de tekst van je artikelen (posts), instellingen etc. voor je eigen blog wilt opslaan"
+
+msgid "Check this option if you want to save all texts of posts, configurations, etc. for all blogs in this website"
+msgstr "Vink deze optie aan als je de tekst van artikelen (posts), instellingen etc. voor  alle blogs onder deze site wilt opslaan"
+
+msgid "Save the backup files on a FTP?"
+msgstr "Wil je de back-up bestanden via FTP bewaren op een externe server?"
+
+msgid "Should be at the form %s or %s"
+msgstr "Dient in het formaat: %s of %s te zijn"
+
+msgid "Please note that the current GMT time of the server is %s. If it is not correct, please configure the Wordpress installation correctly."
+msgstr "Let op: de huidige GMT  server-tijd is %s. Als dit niet juist is, pas de tijd aan in je Wordpress instellingen."
+
+msgid "How to restore the backup files?"
+msgstr "Hoe zet je backup-files terug?"
+
+msgid "Backup finished on %s at %s"
+msgstr "Backup afgerond op %s om %s"
+
+msgid "To download them, please click on the following links:"
+msgstr "Om ze te downloaden, klik op de volgende links:"
+
+msgid "Backup of %s on %s - FTP confirmation"
+msgstr "Backup van %s op %s - FTP bevestiging"
+
+msgid "It seems impossible to switch to PASV mode"
+msgstr "PASV modus niet mogelijk"
+
+msgid "To restore the backups, and if you have backuped the full installation, you will have to execute the following steps:"
+msgstr "Om de backups terug te zetten als je de volledige installatie hebt opgeslagen dien je de volgende stappen uit te voeren:"
+
+msgid "Save all zip files (i.e. *.zip, *.z01, *.z02, etc.) in a single folder on your hard disk."
+msgstr "Sla alle zip files (*.zip, *.z01, *.z02, etc.) in een enkele map/folder op je harde schijf op."
+
+msgid "Unzip these files by using IZArc, Winzip, or Winrar (others software could not support these multipart zip and consider that the archive is corrupted)."
+msgstr "Pak deze files uit met IZArc, Winzip, of Winrar (andere programma&#039;s kunnen problemen hebben met meer-delige compressie-bestanden)."
+
+msgid "Save the extracted files on your webserver."
+msgstr "Sla de uit uitgepakte files op op je webserver."
+
+msgid "Reimport the SQL files (i.e. *.sql1, *sql2, etc.) with phpmyadmin (it is recommended to save your database first)."
+msgstr "Importeer de SQL files (*.sql1, *sql2, etc.) via &#039;phpmyadmin&#039; (sla eerst je database op)."
+
+msgid "To restore the backups, and if you have backuped only some folders, you will have to execute the following steps:"
+msgstr "Om de backups terug te zetten als je slechts een aantal mappen hebt opgeslagen dien je de volgende stappen uit te voeren:"
+
+msgid "Install a fresh version of Wordpress on your webserver."
+msgstr "Installeer de laatste Wordpress versie op je webserver."
+
+msgid "Replace the folders (i.e. 'plugins',  'themes', and/or 'uploads') of the root of your webserver by the extracted folders."
+msgstr "Vervang de mappen (&#039;plugins&#039;, &#039;themes&#039;, en/of &#039;uploads&#039;) in de hoofdfolder van je site door de uitgepakte mappen."
+
+msgid "Replace the wp-config.php (at the root of your webserver) with the extracted one."
+msgstr "Vervang &#039;wp-config.php&#039; in de hoofdfolder van je site door de uitgepakte &#039;wp-config.php&#039;."
+
+msgid "The process is still in progress for this backup (begun %s at %s)."
+msgstr "Backup in volle gang (gestart om %s op %s)."
+
+msgid "The SQL extraction is in progress (%s tables extracted)."
+msgstr "SQL-uitpakken in volle gang (%s tabellen uitgepakt)."
+
+msgid "The ZIP creation is in progress (%s files has been added in the zip file and the current size of the zip is %s)."
+msgstr "ZIP-compressie in volle gang (%s files tot dusverre gecomprimeerd; huidige bestand-grootte: %s)."
+
+msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
+msgstr "FTP-verzending in volle gang (%s files opgeslagen)."
+
+msgid "The MAIL sending is in progress (%s files has been sent)."
+msgstr "MAIL-verzending in volle gang (%s files verstuurd)."
+
+msgid "Please wait, a backup is in progress! If you want to force a new backup, refresh this page and end the current backup first."
+msgstr "Let op, er draait al een backup! Als je een nieuwe backup wil forceren, laadt deze pagina opnieuw (F5) en stop dan eerst de huidige backup."
+
+msgid "It is impossible to create the %s file in the %s folder. Please check folder/file permissions."
+msgstr "Het lukt niet om de %s file aan te maken in de %s folder. Check de folder/file rechten (CHMOD)."
+
+msgid "(SQL extraction)"
+msgstr "(SQL uitpakken)"
+
+msgid "(FTP sending)"
+msgstr "(FTP verzending)"
+
+msgid "Backup of %s on %s (%s)"
+msgstr "Backup van %s op %s (%s)"
+
+msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
+msgstr "De file %s kan niet worden verwijderd (check de folder/file rechten (CHMOD) of beveiligings-beperkingen)."
+
+msgid "%s backup files has been successfully saved on your FTP (%s)"
+msgstr "%s backup files met succes opgeslagen via FTP (%s)"
+
+msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
+msgstr "De file: &#039; %s &#039; kan niet worden opgeslagen in de FTP-locatie. Ftp_put melding: %s"
+
+msgid "The file %s cannot be transfered to the FTP repository and PASV mode cannot be entered : %s"
+msgstr "De file: &#039; %s &#039; kan niet worden opgeslagen in de FTP-locatie en PASV-modus is niet mogelijk: %s"
 
