--- a/lang/backup_scheduler-pl_PL.po
+++ b/lang/backup_scheduler-pl_PL.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-02-23T10:45:28+00:00\n"
+"PO-Revision-Date: 2012-08-25T13:31:20+00:00\n"
 "Last-Translator: Opti <>\n"
 "Last-Translator: Lukasz <www.premiumaccount.co.ukwww.esteepc.co.uk>\n"
 "Last-Translator: pablo <pawel@dream.net.pl>\n"
@@ -23,7 +23,7 @@ msgstr ""
 "X-Textdomain-Support: yes\n"
 
 msgid "This plugin enables scheduled backup of important part of your website : simple to use and efficient !"
-msgstr "Ten plugin umożliwia zaplanowaną kopię ważnych elementów twojej witryny internetowej- łatwy i wydajny w użyciu!"
+msgstr "Ten plugin umożliwia zaplanowaną kopię ważnych elementów twojej witryny internetowej: łatwy i wydajny w użyciu!"
 
 msgid "Sorry, but you should install/activate %s on your website. Otherwise, this plugin will not work properly!"
 msgstr "Obawiam się, ze powinieneś zainstalować/zaktywować- install/activate %s na swojej stronie. W przeciwnym razie wtyczka nie bedzię działać poprawnie!"
@@ -71,7 +71,7 @@ msgid "Check this option if you want to save all themes that you have installed 
 msgstr "Zaznacz tą opcje, jeśli chcesz zachować kopie wszystkich kompozycji, które zainstalowałes i które używasz na swojej stronie."
 
 msgid "The upload directory:"
-msgstr "Folder dla plików sciąganych:     ó ł  ą ę  ś ć  ń   żź ć"
+msgstr "Folder upload:"
 
 msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your website to create your articles/posts/pages."
 msgstr "Zaznacz tą opcje jeśli chcesz zachować kopie wszystkich zdjęc, plików które zainstalowaleś i które używasz na swojej stronie by pisać i tworzyć posty/ strony"
@@ -83,7 +83,7 @@ msgid "Check this option if you want to save the text of your posts, your config
 msgstr "Zaznacz tą opcje, jeśli chcesz zachować wszystkie twoje posty oraz konfiguracje, itp."
 
 msgid "The maximum file size (in MB):"
-msgstr "Maksymalny rozmiar pliku (w MB)"
+msgstr "Maksymalny rozmiar pliku (w MB):"
 
 msgid "Please note that the zip file will be split into multiple files to comply with the maximum file size you have indicated"
 msgstr "Należy pamiętać, że plik zip będzie podzielony na kilka plików aby nie przekroczyć maksymalnego rozmiaru pliku, który ustawiono"
@@ -92,13 +92,13 @@ msgid "Do you want that the backup is sent by email?"
 msgstr "Chcesz aby kopie zapasowe były wysyłane emailem?"
 
 msgid "Send the backup files by email:"
-msgstr "Wyślij backup na email"
+msgstr "Wyślij backup na email:"
 
 msgid "If so, please enter your email:"
 msgstr "Jeśli tak, podaj adres email:"
 
 msgid "Do you want to add a suffix to sent files:"
-msgstr "Czy chcesz dodać przyrostek (sufix) do wysłanych plików"
+msgstr "Czy chcesz dodać przyrostek (sufix) do wysłanych plików:"
 
 msgid "This option allows going round the blocking feature of some mail provider that block the mails with zip attachments (like GMail)."
 msgstr "Ta opcja umożliwia obejśćie zabezpieczeń niektórych dostawców kont emailowych, którzy domyślnie blokują emaile wraz załącznikami z rozszerzeniem zip ( np. GMail.)"
@@ -116,7 +116,7 @@ msgid "FTP host:"
 msgstr "serwer FTP:"
 
 msgid "Should be at the form %s or %s"
-msgstr "Użyć formy %s czy %s"
+msgstr "Użyj formy %s lub %s"
 
 msgid "Your FTP login:"
 msgstr "Twój login FTP:"
@@ -236,7 +236,7 @@ msgid "(SQL extraction)"
 msgstr "(wypakowywanie SQL)"
 
 msgid "An other backup is still in progress (for %s seconds)... Please wait!"
-msgstr "Inna kopia jest ciągle w trakcie wykonywania.. (przez %s sekund)... Proszę czekać"
+msgstr "Inna kopia jest ciągle w trakcie wykonywania.. (przez %s sekund)... Proszę czekać!"
 
 msgid "(ZIP creation)"
 msgstr "(Tworzę archiwum ZIP)"
@@ -303,4 +303,88 @@ msgstr "Pamiętaj, że pliki większe niż ten limit nie zostaną uwzględnione 
 
 msgid "It is impossible to create the %s file in the %s folder. Please check folder/file permissions."
 msgstr "Niemożliwe jest stworzenie pliku %s w folderze %s. Proszę sprawdzić uprawnienia folderów lub plików ."
+
+msgid "The upload directory for this blog:"
+msgstr "Folder uploadu dla tej strony:"
+
+msgid "All upload directories (for this site and the sub-blogs):"
+msgstr "Wszystkie katalogi upload (dla tej strony i pod-blogów):"
+
+msgid "Check this option if you want to save the images, the files, etc. that people have uploaded on their websites to create articles/posts/pages."
+msgstr "Zaznacz tę opcję, jeśli chcesz, aby zapisać zdjęcia, pliki, itp., które ludzie załadowali do tworzenia artykułów / postów / stron."
+
+msgid "The upload directory for the main site:"
+msgstr "Katalog upload  dla głównej strony:"
+
+msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your main website to create your articles/posts/pages."
+msgstr "Zaznacz tę opcję, jeśli chcesz, aby zapisać zdjęcia, pliki itd., które zostały przesłane na Twoją główną stronę do tworzenia artykułów / postów / stron."
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for this blog"
+msgstr "Zaznacz tę opcję, jeśli chcesz zapisać tekst z Twoich postów, konfiguracje, itp. z tej strony"
+
+msgid "All SQL databases:"
+msgstr "Wszystkie bazy SQL:"
+
+msgid "Check this option if you want to save all texts of posts, configurations, etc. for all blogs in this website"
+msgstr "Zaznacz tę opcję, jeśli chcesz, aby zapisać wszystkie teksty postów, konfiguracji, itd. dla wszystkich stron w serwisie"
+
+msgid "Only your SQL database:"
+msgstr "Tylko Twoja baza SQL:"
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for the main website"
+msgstr "Zaznacz tę opcję, jeśli chcesz zapisać tekst z Twoich postów, konfiguracje itp. dla głównej strony"
+
+msgid "Click on that button %s to test if the above information is correct"
+msgstr "Kliknij na ten przycisk %s, aby sprawdzić, czy powyższe informacje są poprawne"
+
+msgid "Test"
+msgstr "Test"
+
+msgid "Please note that the current GMT time of the server is %s. If it is not correct, please configure the Wordpress installation correctly."
+msgstr "Proszę pamiętać, że obecny czas GMT z serwera jest %s. Jeśli nie jest prawidłowy, należy skonfigurować instalację Wordpress poprawnie."
+
+msgid "How to restore the backup files?"
+msgstr "Jak przywrócić pliki kopii zapasowej?"
+
+msgid "To restore the backups, and if you have backuped the full installation, you will have to execute the following steps:"
+msgstr "Aby przywrócić kopie zapasowe, jeśli masz archiwizowane pełną instalację, musisz wykonać następujące kroki:"
+
+msgid "Save all zip files (i.e. *.zip, *.z01, *.z02, etc.) in a single folder on your hard disk."
+msgstr "Zapisz wszystkie pliki zip (np.: *.zip, *.z01, *.z02, itp.) w folderze na Twoim dysku."
+
+msgid "Unzip these files by using IZArc, Winzip, or Winrar (others software could not support these multipart zip and consider that the archive is corrupted)."
+msgstr "Rozpakuj te pliki za pomocą IZArc, WinZip lub WinRAR (oprogramowanie inne mogłyby nie wspierać wieloczęściowych archiwów i zgłosić, że archiwum jest uszkodzone)."
+
+msgid "Save the extracted files on your webserver."
+msgstr "Zapisz wyodrębnione pliki na swoim serwerze."
+
+msgid "Reimport the SQL files (i.e. *.sql1, *sql2, etc.) with phpmyadmin (it is recommended to save your database first)."
+msgstr "Zaimportuj pliki SQL (np. *. SQL1, * SQL2 itp.) z phpMyAdmin (zaleca się, aby zachować swoją bazę danych na początku)."
+
+msgid "To restore the backups, and if you have backuped only some folders, you will have to execute the following steps:"
+msgstr "Aby przywrócić kopie zapasowe, jeśli masz zarchiwizowane tylko niektóre foldery, musisz wykonać następujące kroki:"
+
+msgid "Install a fresh version of Wordpress on your webserver."
+msgstr "Zainstaluj nową wersję Wordpressa na swoim serwerze."
+
+msgid "Replace the folders (i.e. 'plugins',  'themes', and/or 'uploads') of the root of your webserver by the extracted folders."
+msgstr "Zastąp foldery (tj. &quot;plugins&quot;, &quot;themes&quot; i / lub &quot;uploads&quot;) z głównego katalogu serwera WWW Twoimi wypakowanymi folderami."
+
+msgid "Replace the wp-config.php (at the root of your webserver) with the extracted one."
+msgstr "Zastąp wp-config.php (w katalogu głównym serwera internetowego) wypakowanym z archiwum."
+
+msgid "To download them, please click on the following links:"
+msgstr "Aby je pobrać, kliknij na poniższe linki:"
+
+msgid "The file %s cannot be transfered to the FTP repository and PASV mode cannot be entered : %s"
+msgstr "Plik %s nie może być przeniesiony do repozytorium FTP i nie można wprowadzić trybu PASV :%s"
+
+msgid "The folder %s does not seems to be writable"
+msgstr "folder %s nie ma praw zapisu"
+
+msgid "It seems impossible to switch to PASV mode"
+msgstr "Nie da się przełączyć w tryb PASV"
+
+msgid "Everything OK!"
+msgstr "Wszystko jest OK!"
 
