--- a/core/lang/SL_framework-es_ES.po
+++ b/core/lang/SL_framework-es_ES.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-09-18T09:32:07+00:00\n"
+"PO-Revision-Date: 2012-09-28T08:37:30+00:00\n"
 "Last-Translator: IgnacioCalvo <http://ignaciocalvo.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -166,4 +166,274 @@ msgstr "Excepción HTTP inesperada durante la petición a la API"
 
 msgid "This plugin does not seem to be hosted on the wordpress repository."
 msgstr "Este plugin no parece estar alojado en el repositorio Wordpress."
+
+msgid "The Wordpress page: %s"
+msgstr "La página de WordPress: %s"
+
+msgid "Last update:"
+msgstr "Última actualización:"
+
+msgid "Rating: %s"
+msgstr "Puntuación: %s"
+
+msgid "by %s persons"
+msgstr "por %s personas"
+
+msgid "Number of download: %s"
+msgstr "Número de descarga: %s"
+
+msgid "An error occured when retrieving the version of the plugin on Wordpress.org. Please retry!"
+msgstr "Ocurrió un error al obtener la versión del plugin en Wordpress.org. Por favor, inténtelo de nuevo."
+
+msgid "Update of the core ..."
+msgstr "Actualización del núcleo..."
+
+msgid "1) Update with the core of the %s plugin"
+msgstr "1) Actualizar con el núcleo del plugin %s"
+
+msgid "1) The core of the plugin is up-to-date"
+msgstr "1) El núcleo del plugin está actualizado"
+
+msgid "2) Modify the version (but the files of plugin are unchanged)"
+msgstr "2) Modificar la versión (pero los ficheros del plugin quedan intactos)"
+
+msgid "2) Modify the version (the files of the plugin have been changed)"
+msgstr "2) Modificar la versión (los ficheros del plugin han cambiado)"
+
+msgid "2) Modify the readme.txt (as the version has been already changed)"
+msgstr "2) Modificar el readme.txt (pues la versión ya ha cambiado)"
+
+msgid "3) Update the SVN repository (without modifying the version)"
+msgstr "3) Actualizar el repositorio SVN (sin modificar la versión)"
+
+msgid "3) Update the SVN repository (and release a new version %s)"
+msgstr "3) Actualizar el repositorio SVN (y publicar nueva versión %s)"
+
+msgid "Refresh"
+msgstr "Actualizar"
+
+msgid "Change the plugin version for %s"
+msgstr "Cambiar la versión del plugin para %s"
+
+msgid "Version number"
+msgstr "Número de versión"
+
+msgid "The current version of the plugin %s is %s."
+msgstr "La versión actual del plugin %s es %s."
+
+msgid "Please modify the version:"
+msgstr "Por favor, modifique la versión:"
+
+msgid "Readme file"
+msgstr "Fichero leeme"
+
+msgid "The current content of %s is:"
+msgstr "El contenido actual de %s es:"
+
+msgid "The current text"
+msgstr "Texto actual"
+
+msgid "The proposed text"
+msgstr "Texto propuesto"
+
+msgid "Save these data"
+msgstr "Guardar datos"
+
+msgid "There is a problem with the header of %s. It appears that there is no Version header."
+msgstr "Hay un problema con la cabecera de %s. Parece que no hay cabecera Version."
+
+msgid "The data has been saved. You may close this window."
+msgstr "Los datos han sido guardados. Puedes cerrar esta ventana."
+
+msgid "The folder %s is not %s !"
+msgstr "¡La carpeta %s no es %s!"
+
+msgid "The file %s is not %s !"
+msgstr "¡El fichero %s no es %s!"
+
+msgid "The folder %s does not exists and cannot be created !"
+msgstr "¡La carpeta %s no existe y no puede crearse!"
+
+msgid "The file %s does not exists and cannot be created !"
+msgstr "¡El fichero %s no existe y no puede crearse!"
+
+msgid "There are some issues with folders rights. Please corret them as soon as possible as they could induce bugs and instabilities."
+msgstr "Hay problemas con los derechos de carpeta. Por favor, corríjalos lo antes posible pues podrían producir errores e inestabilidades."
+
+msgid "Please see below:"
+msgstr "Por favor, ver más abajo:"
+
+msgid "Plugins that you may install"
+msgstr "Plugins que puedes instalar"
+
+msgid "The following plugins have been developed by the author and are not yet installed:"
+msgstr "Los siguientes plugins han sido desarrollados por el autor y todavía no se han instalado:"
+
+msgid "Plugin not yet installed"
+msgstr "Plugin no instalado todavía"
+
+msgid "Description and Screenshots"
+msgstr "Descripción y capturas de pantalla"
+
+msgid "All author's plugins have been installed. Thank you!"
+msgstr "Todos los puglins del autor han sido instalados. ¡Gracias!"
+
+msgid "Installed plugins"
+msgstr "Plugins instalados"
+
+msgid "You have already installed the following author's plugins:"
+msgstr "Ya has instalado los siguientes plugins del autor:"
+
+msgid "Plugin already installed"
+msgstr "Plugin ya instalado"
+
+msgid "Number of download:"
+msgstr "Número de descarga:"
+
+msgid "Your credentials do not seem to be correct. Please check them!"
+msgstr "Sus credenciales parecen incorrectas. Por favor, compruébelas."
+
+msgid "This file have not been written in the repository due to server problem. Nevertheless, you should retry as it often works better with a second try !"
+msgstr "Debido a un problema, este fichero no se ha guardado en el repositorio. No obstante, debería volver a intentarlo pues normalmente esto resuelve el problema."
+
+msgid "SVN client for %s"
+msgstr "Cliente SVN para %s"
+
+msgid "Updating the local cache"
+msgstr "Actualizando la caché local"
+
+msgid "folder created"
+msgstr "carpeta creada"
+
+msgid "folder creation has failed !"
+msgstr "creación de carpeta ha fallado!"
+
+msgid "%s bytes transfered"
+msgstr "%s bytes transferidos"
+
+msgid "An error occurred during the retrieval of files on the server ! Sorry ..."
+msgstr "Ocurrió un error al obtener ficheros del servidor. Lo sentimos..."
+
+msgid "Local to SVN repository"
+msgstr "Local a repositorio SVN"
+
+msgid "KB"
+msgstr "KB"
+
+msgid "MB"
+msgstr "MB"
+
+msgid "GB"
+msgstr "GB"
+
+msgid "Feedback form"
+msgstr "Formulario de contacto"
+
+msgid "This form is an easy way to contact the author and to discuss issues/incompatibilities/etc. with him"
+msgstr "Este formulario es una forma sencilla de contactar con el autor y discutir con el problemas, incompatibilidades, etc."
+
+msgid "Contact the author"
+msgstr "Contacte con el autor"
+
+msgid "Your name:"
+msgstr "Su nombre:"
+
+msgid "Your email:"
+msgstr "Su email:"
+
+msgid "Useful... so that the author will be able to anwser you."
+msgstr "Útil.. para que el autor pueda responderte."
+
+msgid "Your comments:"
+msgstr "Tus comentarios:"
+
+msgid "Here, you may configure three levels of translations: at the plugin level, at the framework level, and at the dashboard level."
+msgstr "Aquí se pueden configurar tres niveles de traducciones: nivel de plugin, nivel de framework y nivel de escritorio."
+
+msgid "Please be informed that your current language is %s. Text will be translated if a translation is available."
+msgstr "Tenga en cuenta que su lenguaje actual es %s. El texto será traducido si exista traducción a dicho idioma."
+
+msgid "Translations available for this plugin (i.e. %s)"
+msgstr "Traducciones disponibles para este plugin (p. ej. %s)"
+
+msgid "Translations available for the SL framework (stored in %s)"
+msgstr "Traducciones disponibles para el SL Framework (almacenadas en %s)"
+
+msgid "Translations installed for Wordpress"
+msgstr "Traducciones instaladas para WordPress"
+
+msgid "Adding a new translation for this language: %s"
+msgstr "Añadiendo una nuevo traducción para este lenguaje: %s"
+
+msgid "Sentence to translate"
+msgstr "Frase para traducir"
+
+msgid "Translation"
+msgstr "Traducción"
+
+msgid "(if your name/pseudo is already in the list, there is no need to fill this input)"
+msgstr "(si su nombre/nick ya está en la lista, no es necesario rellenar esta casilla)"
+
+msgid "Your email or your website:"
+msgstr "Tu email o website:"
+
+msgid "Create the translation files"
+msgstr "Crear ficheros de traducción"
+
+msgid "Modifying the translation for this language: %s"
+msgstr "Modificando la traducción para este lenguaje: %s"
+
+msgid "Modify the translation files"
+msgstr "Modificar los ficheros de traducción"
+
+msgid "The file %s cannot be extracted from mail attachments"
+msgstr "El fichero %s no puede extraerse de adjuntos de email"
+
+msgid "The file %s cannot be written in the %s folder"
+msgstr "El fichero %s no puede escribirse en la carpeta %s"
+
+msgid "The file %s has been imported in the %s folder"
+msgstr "El fichero %s ha sido importado a la carpeta %s"
+
+msgid "Plugin"
+msgstr "Plugin"
+
+msgid "Language"
+msgstr "Lenguaje"
+
+msgid "Information"
+msgstr "Información"
+
+msgid "%s sentences have been translated (i.e. %s)."
+msgstr "%s frases han sido traducidas (p. ej. %s)."
+
+msgid "Delete"
+msgstr "Borrar"
+
+msgid "%s sentences have been newly translated and %s sentences have been modified (the old file has %s translated sentences)."
+msgstr "%s frases han sido traducidas por primera vez y %s frases han sido modificadas (el antiguo fichero tiene %s frases traducidas)."
+
+msgid "Merge"
+msgstr "Unificar"
+
+msgid "New translations are available"
+msgstr "Hay nuevas traducciones disponibles"
+
+msgid "Updates of translations are available"
+msgstr "Hay modificaciones de las traducciones disponibles"
+
+msgid "What are the differences between these two files?"
+msgstr "¿Cuáles son las diferencias entre estos dos ficheros?"
+
+msgid "Old sentence"
+msgstr "Antigua frase"
+
+msgid "New sentence"
+msgstr "Nueva frase"
+
+msgid "To replace?"
+msgstr "¿Reemplazar?"
+
+msgid "The translation %s have been sent"
+msgstr "La traducción %s ha sido enviada"
 
